--- a/tpe-web2/css/style.css
+++ b/tpe-web2/css/style.css
@@ -67,9 +67,9 @@ table td a{
 }
 
 footer{
-    margin-left: 600px;
-    margin-top: 100px;
-    padding: 10px;
+    margin-left: 33rem;
+    margin-top: 5rem;
+    padding: .5rem;
 }
 
 .container-button,.container-button a button {
@@ -160,18 +160,18 @@ a{
 }
 
 
-.error,.prueba{
+.error,.msg-error{
     background-color: white;
     color: red;
 }
 
-.prueba{
+.msg-error{
     text-align: center;
     text-transform: capitalize;
     width: 50%;
-    margin-left: 400px;
+    margin-left: 21.5rem;
 }
 .location{
-    margin-left: 730px;
+    margin-left: 41rem;
 }
 
